mysql-citi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-app
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql-app
spec:
  selector:
    matchLabels:
      app: mysql-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - image: mysql:8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
              drop: ["ALL"]
          runAsNonRoot: true 
          seccompProfile:
                   type: RuntimeDefault
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
